--- a/requirements.txt
+++ b/requirements.txt
@@ -22,7 +22,7 @@ POZIOMY GRY
 - ==================  dalej wszystko będzie się działo w funkcji PLAY
 # -   wyswietlić initial state of game _ _ _ _ _ oraz liczbę żyć(lives)
 -   wyświetlić wprowadzone litery
--   pobrać literę od użytkownika z zakresu a-z A-Z - walidacja danych
+# -   pobrać literę od użytkownika z zakresu a-z A-Z - walidacja danych
 -   jeśli użytkownik wprowadzi "quit" to zakończyć grę natychmiast
 -   sprawdzić czy litera nie została już raz pobrana (użyć do tego set()), jeśli tak to powiadomić użytkownika i pozwolić mu wprowadzić raz jeszcze 
 
