--- a/requirements.txt
+++ b/requirements.txt
@@ -23,8 +23,8 @@ POZIOMY GRY
 # -   wyswietlić initial state of game _ _ _ _ _ oraz liczbę żyć(lives)
 -   wyświetlić wprowadzone litery
 # -   pobrać literę od użytkownika z zakresu a-z A-Z - walidacja danych
--   jeśli użytkownik wprowadzi "quit" to zakończyć grę natychmiast
--   sprawdzić czy litera nie została już raz pobrana (użyć do tego set()), jeśli tak to powiadomić użytkownika i pozwolić mu wprowadzić raz jeszcze 
+# -   jeśli użytkownik wprowadzi "quit" to zakończyć grę natychmiast
+# -   sprawdzić czy litera nie została już raz pobrana (użyć do tego set()), jeśli tak to powiadomić użytkownika i pozwolić mu wprowadzić raz jeszcze 
 
 - sprawdzić czy litera znajduje się w zmiennej WORLD: 
     -   jeśli tak to wyświetlić stan np _ a r s _ _
